# oligula-teste

./: .eslintrc.json  README.md  TO-DO.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: quality-assurance.yml  release-unstable.yml  release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: index.ts
src/components/ClearableTextInput/: ClearableTextInput.tsx  index.ts
src/components/FAB/: FAB.tsx
src/components/UpdateModal/: UpdateModal.tsx
src/helpers/: checkMousePositionEquality.ts  ensureCharactersLimit.ts  generateRandomID.ts  index.ts
src/hooks/: index.ts  useParentId.ts
src/layouts/: Header.tsx
src/layouts/Navbar/: Navbar.module.css  Navbar.tsx  Settings.tsx  ThemeSwitch.tsx  navbarItems.ts
src/pages/: index.ts
src/pages/AutomaticInsertionPage/: AutomaticInsertionPage.tsx  index.ts
src/pages/AutomatorPage/: AutomatorPage.tsx  StepTypes.ts  index.ts
src/pages/HomePage/: HomePage.module.css  HomePage.tsx
src/pages/InmetroSealGeneratorPage/: InmetroSealGeneratorPage.tsx  index.ts
src/pages/NotFoundPage/: NotFoundIllustration.tsx  NotFoundPage.module.css  NotFoundPage.tsx
src/pages/SpreadsheetFormatterPage/: SpreadsheetFormatterPage.tsx  index.ts
src/providers/: AutomationProvider.tsx  HeaderProvider.tsx  MantineProvider.tsx  PreloadProvider.tsx  ReactRouterProvider.tsx  index.ts
src/types/: MouseButton.ts  MousePosition.ts  Step.ts  Variables.ts  index.ts
(+36 files in other folders)
